--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Bienvenido</h1>
-    <p>Valhalla_Music <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Valhalla_Music <a href="https://learn.microsoft.com/aspnet/core">Elias y Moises</a>.</p>
 </div>
