--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bienvenido</h1>
+    <h1 class="display-4">chupapija</h1>
     <p>Valhalla_Music <a href="https://learn.microsoft.com/aspnet/core">Elias y Moises</a>.</p>
 </div>
