--- a/Views/Productos/ProductoList.cshtml
+++ b/Views/Productos/ProductoList.cshtml
@@ -1,9 +1,18 @@
 @using ValhalaMusic.Models;
 @model List<ProductoModel>
     
-@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
 
+<h1>Productos</h1>
+
+<a class = "btn btn-primary" asp-action="" asp-controller="ProductoControler">Agregar Producto</a>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Nombre</th>
+            <th>Precio</th>
+            <th>Producto</th>
+            <th>Stock</th>
+        </tr>
+    </thead>
     
