--- a/Views/Productos/ProductoAdd.cshtml
+++ b/Views/Productos/ProductoAdd.cshtml
@@ -3,7 +3,7 @@
 
 <h1>Alta de Productos</h1>
 
-<form class="form" asp-controler="Productos" asp-action="ProductoAdd">
+<form class="form" asp-controler="Productos" asp-action="ProductoSave">
 
     <div class="mb-3">
         <label asp-for="Nombre" class="form-label">Nombre</label>
